idl2matlab.output
Terminaux inutilisés dans la grammaire

   Assign
   OBJECT


La règle est inutile dans l'analyseur à cause de conflits

  172 ref_struct_list: ref_struct '.' '(' expression_master ')'


État 2 conflits: 2 décalage/réduction, 2 réduction/réduction
État 24 conflits: 2 décalage/réduction
État 26 conflits: 3 décalage/réduction
État 29 conflits: 2 décalage/réduction
État 37 conflits: 2 décalage/réduction
État 53 conflits: 21 décalage/réduction, 3 réduction/réduction
État 62 conflits: 20 réduction/réduction
État 63 conflits: 21 décalage/réduction, 4 réduction/réduction
État 64 conflits: 2 décalage/réduction, 2 réduction/réduction
État 79 conflits: 21 décalage/réduction
État 80 conflits: 71 réduction/réduction
État 83 conflits: 2 réduction/réduction
État 84 conflits: 2 réduction/réduction
État 86 conflits: 2 réduction/réduction
État 87 conflits: 2 réduction/réduction
État 89 conflits: 2 réduction/réduction
État 97 conflits: 19 décalage/réduction
État 107 conflits: 2 décalage/réduction
État 110 conflits: 3 décalage/réduction
État 112 conflits: 3 décalage/réduction
État 115 conflits: 1 décalage/réduction
État 116 conflits: 2 décalage/réduction
État 122 conflits: 2 décalage/réduction
État 146 conflits: 2 décalage/réduction
État 149 conflits: 21 décalage/réduction
État 150 conflits: 2 décalage/réduction
État 151 conflits: 2 décalage/réduction
État 153 conflits: 23 réduction/réduction
État 154 conflits: 23 réduction/réduction
État 156 conflits: 2 décalage/réduction, 3 réduction/réduction
État 157 conflits: 2 décalage/réduction, 23 réduction/réduction
État 158 conflits: 2 décalage/réduction, 23 réduction/réduction
État 159 conflits: 3 décalage/réduction, 2 réduction/réduction
État 163 conflits: 1 décalage/réduction
État 175 conflits: 2 décalage/réduction
État 218 conflits: 2 décalage/réduction
État 236 conflits: 3 décalage/réduction
État 243 conflits: 1 décalage/réduction
État 244 conflits: 1 décalage/réduction
État 245 conflits: 1 décalage/réduction
État 246 conflits: 1 décalage/réduction
État 247 conflits: 1 décalage/réduction
État 248 conflits: 1 décalage/réduction
État 249 conflits: 1 décalage/réduction
État 250 conflits: 1 décalage/réduction
État 251 conflits: 1 décalage/réduction
État 252 conflits: 1 décalage/réduction
État 253 conflits: 1 décalage/réduction
État 254 conflits: 1 décalage/réduction
État 255 conflits: 1 décalage/réduction
État 256 conflits: 1 décalage/réduction
État 257 conflits: 1 décalage/réduction
État 258 conflits: 1 décalage/réduction
État 259 conflits: 1 décalage/réduction
État 260 conflits: 1 décalage/réduction
État 261 conflits: 1 décalage/réduction
État 262 conflits: 1 décalage/réduction
État 264 conflits: 2 décalage/réduction
État 265 conflits: 2 décalage/réduction
État 268 conflits: 1 décalage/réduction
État 270 conflits: 2 décalage/réduction, 3 réduction/réduction
État 271 conflits: 2 décalage/réduction, 23 réduction/réduction
État 272 conflits: 2 décalage/réduction, 23 réduction/réduction
État 289 conflits: 2 décalage/réduction
État 339 conflits: 2 décalage/réduction
État 349 conflits: 1 décalage/réduction
État 350 conflits: 1 décalage/réduction
État 351 conflits: 1 décalage/réduction
État 357 conflits: 2 décalage/réduction
État 362 conflits: 1 décalage/réduction
État 368 conflits: 2 décalage/réduction
État 379 conflits: 18 décalage/réduction
État 397 conflits: 1 décalage/réduction
État 399 conflits: 3 décalage/réduction
État 400 conflits: 3 décalage/réduction
État 405 conflits: 1 décalage/réduction, 93 réduction/réduction
État 416 conflits: 1 décalage/réduction
État 417 conflits: 3 décalage/réduction, 5 réduction/réduction
État 423 conflits: 3 réduction/réduction
État 424 conflits: 18 décalage/réduction
État 460 conflits: 2 décalage/réduction
État 470 conflits: 2 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: comment block comment
    2        | comment block
    3        | block comment
    4        | block

    5 block: comment blockbase comment
    6      | comment blockbase
    7      | blockbase comment
    8      | blockbase
    9      | comment

   10 blockbase: declarstat_list End block
   11          | declarstat_list End
   12          | declarstat_list
   13          | Begin block End

   14 name: IDENTIFIER
   15     | functioncall_ou_ref_matrix
   16     | ref_struct_list
   17     | var_system
   18     | ref_object
   19     | parenthese

   20 declarstat_list: decl_stat
   21                | declarstat_list decl_stat

   22 decl_stat: declaration
   23          | statement

   24 declaration: comment declarationbase
   25            | declarationbase comment
   26            | declarationbase
   27            | comment declarationbase comment

   28 declarationbase: decl_proc
   29                | decl_func

   30 decl_proc: Pro IDENTIFIER suite_param statement_list_vide End
   31          | Pro IDENTIFIER statement_list_vide End
   32          | Pro IDENTIFIER ':' ':' IDENTIFIER suite_param statement_list_vide End
   33          | Pro IDENTIFIER ':' ':' IDENTIFIER statement_list_vide End

   34 decl_func: Function IDENTIFIER suite_param statement_list_vide End
   35          | Function IDENTIFIER statement_list_vide End
   36          | Function IDENTIFIER ':' ':' IDENTIFIER suite_param statement_list_vide End
   37          | Function IDENTIFIER ':' ':' IDENTIFIER statement_list_vide End

   38 forward_func: Forward_function suite_iden

   39 compile_opt: COMPILE_OPT suite_iden

   40 common_case: Common suite_iden
   41            | Common ',' suite_iden

   42 suite_iden: IDENTIFIER
   43           | IDENTIFIER ',' suite_iden

   44 suite_param: ',' param
   45            | suite_param ',' param

   46 param: IDENTIFIER
   47      | IDENTIFIER '=' IDENTIFIER
   48      | Extra '=' IDENTIFIER
   49      | Ref_Extra '=' IDENTIFIER
   50      | Return '=' IDENTIFIER

   51 statement_list_ctrl: Begin statement_list_vide fin_block
   52                    | statement

   53 statement_list_vide: statement_list
   54                    | Begin statement_list_vide fin_block
   55                    | /* vide */

   56 statement_list: statement
   57               | statement_list statement

   58 expression_master: expression_master '?' expression_master ':' expression_master
   59                  | expression

   60 expression: expression Or expression
   61           | expression ORSHORTCUT expression
   62           | expression And expression
   63           | expression ANDSHORTCUT expression
   64           | expression LT expression
   65           | expression GT expression
   66           | expression LE expression
   67           | expression GE expression
   68           | expression EQ expression
   69           | expression NE expression
   70           | expression '+' expression
   71           | expression '-' expression
   72           | expression '^' expression
   73           | expression '*' expression
   74           | expression SLASH expression
   75           | expression Mod expression
   76           | expression DIESE expression
   77           | expression DIESE2 expression
   78           | expression '<' expression
   79           | expression '>' expression
   80           | expression XOR expression
   81           | Not expression
   82           | TILDE expression
   83           | '-' expression
   84           | '+' expression
   85           | expressionIncOuDec
   86           | denotation
   87           | name FLECHE functioncall_ou_ref_matrix
   88           | name FLECHE func_obj_call
   89           | parenthese
   90           | functioncall_ou_ref_matrix
   91           | var_system
   92           | structure
   93           | matrix
   94           | integerAL
   95           | assignment
   96           | ref_struct_list
   97           | ref_object

   98 expressionIncOuDec: PlusPlus name
   99                   | name PlusPlus
  100                   | MoinsMoins name
  101                   | name MoinsMoins

  102 statement: statementbase
  103          | comment statementbase
  104          | statementbase comment
  105          | comment statementbase comment
  106          | comment

  107 statementbase: Begin statement_list_vide End
  108              | catchstatement
  109              | ifstatement
  110              | casestatement
  111              | whilestatement
  112              | repeatstatement
  113              | forstatement
  114              | assignment
  115              | procedurecall
  116              | forward_func
  117              | compile_opt
  118              | common_case
  119              | gestion_erreur
  120              | Return ',' expression_master
  121              | Return
  122              | name FLECHE procedurecall
  123              | name FLECHE proc_obj_call

  124 integerAL: DECIMAL
  125          | HEXADECIMAL
  126          | OCTAL

  127 denotation: INTEGER
  128           | REAL
  129           | IDENTIFIER
  130           | STRING

  131 catchstatement: Catch ',' suite_call

  132 proc_obj_call: IDENTIFIER ':' ':' procedurecall

  133 func_obj_call: IDENTIFIER ':' ':' functioncall_ou_ref_matrix

  134 procedurecall: IDENTIFIER ',' suite_call_list
  135              | IDENTIFIER

  136 parenthese: '(' expression_master ')' suite_parenthese

  137 suite_parenthese: '(' suite_call_list ')'
  138                 | '[' suite_call_list ']'
  139                 | '.' '(' suite_call_list ')'
  140                 | /* vide */

  141 functioncall_ou_ref_matrix: IDENTIFIER '(' suite_call_list ')'
  142                           | IDENTIFIER '[' suite_call_list ']'
  143                           | IDENTIFIER '(' ')'

  144 suite_call_list: suite_call
  145                | suite_call ',' suite_call_list

  146 suite_call: expression_master
  147           | IDENTIFIER '=' expression_master
  148           | Extra '=' expression_master
  149           | Ref_Extra '=' expression_master
  150           | '*'
  151           | SLASH IDENTIFIER
  152           | SLASH Return
  153           | intervalle

  154 structure: '{' suite_cons '}'
  155          | '{' IDENTIFIER ',' suite_cons '}'
  156          | '{' IDENTIFIER ',' suite_call_list '}'
  157          | '{' IDENTIFIER '}'

  158 suite_cons: IDENTIFIER ':' expression_master
  159           | INHERITS IDENTIFIER
  160           | IDENTIFIER ':' expression_master ',' suite_cons
  161           | INHERITS IDENTIFIER ',' suite_cons

  162 ref_object: '*' IDENTIFIER suite_ref_object
  163           | '(' '*' IDENTIFIER suite_parenthese ')' suite_ref_object
  164           | '(' ref_object ')'
  165           | '*' ref_object suite_ref_object
  166           | '(' '*' ref_object suite_parenthese ')' suite_ref_object

  167 suite_ref_object: '.' ref_struct
  168                 | suite_parenthese
  169                 | '.' ref_struct_list

  170 ref_struct_list: ref_struct '.' ref_struct_list
  171                | ref_struct '.' ref_struct
  172                | ref_struct '.' '(' expression_master ')'

  173 ref_struct: IDENTIFIER '(' suite_call_list ')'
  174           | IDENTIFIER '[' suite_call_list ']'
  175           | IDENTIFIER
  176           | parenthese

  177 matrix: '[' suite_matrix ']'

  178 suite_matrix: expression_master
  179             | expression_master ',' suite_matrix

  180 intervalle: expression_master ':' expression_times

  181 expression_times: expression_master
  182                 | '*'

  183 var_system: '!' IDENTIFIER
  184           | '!' ref_struct_list

  185 casestatement: Case expression_master Of case_suite ElseCase statement_list_case fin_case
  186              | Case expression_master Of comment case_suite ElseCase statement_list_case fin_case
  187              | Case expression_master Of case_suite fin_case
  188              | Case expression_master Of comment case_suite fin_case

  189 fin_case: Endcase
  190         | End

  191 case_suite: expression_master ':' case_suite
  192           | expression_master ':' comment case_suite
  193           | expression_master ':' statement_list_case case_suite
  194           | expression_master ':' statement_list_case

  195 statement_list_case: /* vide */
  196                    | Begin statement_list_vide fin_block
  197                    | statement

  198 ifstatement: If expression_master Then statement_list_ctrl
  199            | If expression_master Then statement_list_ctrl suite_if_else

  200 suite_if_else: Else statement_list_ctrl

  201 whilestatement: While expression_master Do statement_list_ctrl

  202 repeatstatement: Repeat statement_list_vide Until expression_master

  203 forstatement: For IDENTIFIER '=' expression_master ',' expression_master ',' expression_master Do statement_list_ctrl
  204             | For IDENTIFIER '=' expression_master ',' expression_master Do statement_list_ctrl

  205 fin_block: Endrep
  206          | Endcase
  207          | Endwhile
  208          | Endelse
  209          | Endif
  210          | Endfor

  211 assignment: name '=' expression_master
  212           | name PLUSEQ expression_master
  213           | name DIESE2EQ expression_master
  214           | name DIESEEQ expression_master
  215           | name TIMESEQ expression_master
  216           | name MOINSEQ expression_master
  217           | name SLASHEQ expression_master
  218           | name MINEQ expression_master
  219           | name MAXEQ expression_master
  220           | name ANDEQ expression_master
  221           | name EQEQ expression_master
  222           | name GEEQ expression_master
  223           | name GTEQ expression_master
  224           | name LEEQ expression_master
  225           | name LTEQ expression_master
  226           | name MODEQ expression_master
  227           | name NEEQ expression_master
  228           | name OREQ expression_master
  229           | name XOREQ expression_master
  230           | name POWEREQ expression_master
  231           | expressionIncOuDec

  232 gestion_erreur: IDENTIFIER ':'

  233 comment: comment ACOMMENT
  234        | comment CR
  235        | ACOMMENT
  236        | CR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 183 184
'(' (40) 136 137 139 141 143 163 164 166 172 173
')' (41) 136 137 139 141 143 163 164 166 172 173
'*' (42) 73 150 162 163 165 166 182
'+' (43) 70 84
',' (44) 41 43 44 45 120 131 134 145 155 156 160 161 179 203 204
'-' (45) 71 83
'.' (46) 139 167 169 170 171 172
':' (58) 32 33 36 37 58 132 133 158 160 180 191 192 193 194 232
'<' (60) 78
'=' (61) 47 48 49 50 147 148 149 203 204 211
'>' (62) 79
'?' (63) 58
'[' (91) 138 142 174 177
']' (93) 138 142 174 177
'^' (94) 72
'{' (123) 154 155 156 157
'}' (125) 154 155 156 157
error (256)
ElseCase (258) 185 186
ACOMMENT (259) 233 235
DIESE2 (260) 77
IDENTIFIER (261) 14 30 31 32 33 34 35 36 37 42 43 46 47 48 49 50 129
    132 133 134 135 141 142 143 147 151 155 156 157 158 159 160 161
    162 163 173 174 175 183 203 204 232
INTEGER (262) 127
REAL (263) 128
DECIMAL (264) 124
HEXADECIMAL (265) 125
OCTAL (266) 126
STRING (267) 130
End (268) 10 11 13 30 31 32 33 34 35 36 37 107 190
Begin (269) 13 51 54 107 196
If (270) 198 199
Then (271) 198 199
Of (272) 185 186 187 188
Or (273) 60
Case (274) 185 186 187 188
And (275) 62
LT (276) 64
LE (277) 66
GT (278) 65
GE (279) 67
EQ (280) 68
NE (281) 69
Pro (282) 30 31 32 33
Not (283) 81
SLASH (284) 74 151 152
Mod (285) 75
While (286) 201
Repeat (287) 202
For (288) 203 204
Endrep (289) 205
Endwhile (290) 207
Endfor (291) 210
Do (292) 201 203 204
Until (293) 202
Assign (294)
Else (295) 200
Endelse (296) 208
Endif (297) 209
Function (298) 34 35 36 37
Common (299) 40 41
Extra (300) 48 148
Ref_Extra (301) 49 149
Endcase (302) 189 206
Return (303) 50 120 121 152
DIESE (304) 76
XOR (305) 80
Catch (306) 131
Forward_function (307) 38
FLECHE (308) 87 88 122 123
INHERITS (309) 159 161
OBJECT (310)
COMPILE_OPT (311) 39
DIESE2EQ (312) 213
DIESEEQ (313) 214
TIMESEQ (314) 215
PLUSEQ (315) 212
MOINSEQ (316) 216
SLASHEQ (317) 217
MINEQ (318) 218
MAXEQ (319) 219
ANDEQ (320) 220
EQEQ (321) 221
GEEQ (322) 222
GTEQ (323) 223
LEEQ (324) 224
LTEQ (325) 225
MODEQ (326) 226
NEEQ (327) 227
OREQ (328) 228
XOREQ (329) 229
POWEREQ (330) 230
ANDSHORTCUT (331) 63
ORSHORTCUT (332) 61
TILDE (333) 82
PlusPlus (334) 98 99
MoinsMoins (335) 100 101
CR (336) 234 236
UUPLUS (337)
UUMINUS (338)


Non-terminaux, suivis des règles où ils apparaissent

$accept (102)
    à gauche: 0
program (103)
    à gauche: 1 2 3 4, à droite: 0
block (104)
    à gauche: 5 6 7 8 9, à droite: 1 2 3 4 10 13
blockbase (105)
    à gauche: 10 11 12 13, à droite: 5 6 7 8
name (106)
    à gauche: 14 15 16 17 18 19, à droite: 87 88 98 99 100 101 122
    123 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225
    226 227 228 229 230
declarstat_list (107)
    à gauche: 20 21, à droite: 10 11 12 21
decl_stat (108)
    à gauche: 22 23, à droite: 20 21
declaration (109)
    à gauche: 24 25 26 27, à droite: 22
declarationbase (110)
    à gauche: 28 29, à droite: 24 25 26 27
decl_proc (111)
    à gauche: 30 31 32 33, à droite: 28
decl_func (112)
    à gauche: 34 35 36 37, à droite: 29
forward_func (113)
    à gauche: 38, à droite: 116
compile_opt (114)
    à gauche: 39, à droite: 117
common_case (115)
    à gauche: 40 41, à droite: 118
suite_iden (116)
    à gauche: 42 43, à droite: 38 39 40 41 43
suite_param (117)
    à gauche: 44 45, à droite: 30 32 34 36 45
param (118)
    à gauche: 46 47 48 49 50, à droite: 44 45
statement_list_ctrl (119)
    à gauche: 51 52, à droite: 198 199 200 201 203 204
statement_list_vide (120)
    à gauche: 53 54 55, à droite: 30 31 32 33 34 35 36 37 51 54 107
    196 202
statement_list (121)
    à gauche: 56 57, à droite: 53 57
expression_master (122)
    à gauche: 58 59, à droite: 58 120 136 146 147 148 149 158 160
    172 178 179 180 181 185 186 187 188 191 192 193 194 198 199 201
    202 203 204 211 212 213 214 215 216 217 218 219 220 221 222 223
    224 225 226 227 228 229 230
expression (123)
    à gauche: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97, à droite:
    59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84
expressionIncOuDec (124)
    à gauche: 98 99 100 101, à droite: 85 231
statement (125)
    à gauche: 102 103 104 105 106, à droite: 23 52 56 57 197
statementbase (126)
    à gauche: 107 108 109 110 111 112 113 114 115 116 117 118 119
    120 121 122 123, à droite: 102 103 104 105
integerAL (127)
    à gauche: 124 125 126, à droite: 94
denotation (128)
    à gauche: 127 128 129 130, à droite: 86
catchstatement (129)
    à gauche: 131, à droite: 108
proc_obj_call (130)
    à gauche: 132, à droite: 123
func_obj_call (131)
    à gauche: 133, à droite: 88
procedurecall (132)
    à gauche: 134 135, à droite: 115 122 132
parenthese (133)
    à gauche: 136, à droite: 19 89 176
suite_parenthese (134)
    à gauche: 137 138 139 140, à droite: 136 163 166 168
functioncall_ou_ref_matrix (135)
    à gauche: 141 142 143, à droite: 15 87 90 133
suite_call_list (136)
    à gauche: 144 145, à droite: 134 137 138 139 141 142 145 156
    173 174
suite_call (137)
    à gauche: 146 147 148 149 150 151 152 153, à droite: 131 144
    145
structure (138)
    à gauche: 154 155 156 157, à droite: 92
suite_cons (139)
    à gauche: 158 159 160 161, à droite: 154 155 160 161
ref_object (140)
    à gauche: 162 163 164 165 166, à droite: 18 97 164 165 166
suite_ref_object (141)
    à gauche: 167 168 169, à droite: 162 163 165 166
ref_struct_list (142)
    à gauche: 170 171 172, à droite: 16 96 169 170 184
ref_struct (143)
    à gauche: 173 174 175 176, à droite: 167 170 171 172
matrix (144)
    à gauche: 177, à droite: 93
suite_matrix (145)
    à gauche: 178 179, à droite: 177 179
intervalle (146)
    à gauche: 180, à droite: 153
expression_times (147)
    à gauche: 181 182, à droite: 180
var_system (148)
    à gauche: 183 184, à droite: 17 91
casestatement (149)
    à gauche: 185 186 187 188, à droite: 110
fin_case (150)
    à gauche: 189 190, à droite: 185 186 187 188
case_suite (151)
    à gauche: 191 192 193 194, à droite: 185 186 187 188 191 192
    193
statement_list_case (152)
    à gauche: 195 196 197, à droite: 185 186 193 194
ifstatement (153)
    à gauche: 198 199, à droite: 109
suite_if_else (154)
    à gauche: 200, à droite: 199
whilestatement (155)
    à gauche: 201, à droite: 111
repeatstatement (156)
    à gauche: 202, à droite: 112
forstatement (157)
    à gauche: 203 204, à droite: 113
fin_block (158)
    à gauche: 205 206 207 208 209 210, à droite: 51 54 196
assignment (159)
    à gauche: 211 212 213 214 215 216 217 218 219 220 221 222 223
    224 225 226 227 228 229 230 231, à droite: 95 114
gestion_erreur (160)
    à gauche: 232, à droite: 119
comment (161)
    à gauche: 233 234 235 236, à droite: 1 2 3 5 6 7 9 24 25 27 103
    104 105 106 186 188 192 233 234


état 0

    0 $accept: . program $end

    ACOMMENT          décalage et aller à l'état 1
    IDENTIFIER        décalage et aller à l'état 2
    Begin             décalage et aller à l'état 3
    If                décalage et aller à l'état 4
    Case              décalage et aller à l'état 5
    Pro               décalage et aller à l'état 6
    While             décalage et aller à l'état 7
    Repeat            décalage et aller à l'état 8
    For               décalage et aller à l'état 9
    Function          décalage et aller à l'état 10
    Common            décalage et aller à l'état 11
    Return            décalage et aller à l'état 12
    Catch             décalage et aller à l'état 13
    Forward_function  décalage et aller à l'état 14
    COMPILE_OPT       décalage et aller à l'état 15
    PlusPlus          décalage et aller à l'état 16
    MoinsMoins        décalage et aller à l'état 17
    CR                décalage et aller à l'état 18
    '*'               décalage et aller à l'état 19
    '('               décalage et aller à l'état 20
    '!'               décalage et aller à l'état 21

    program                     aller à l'état 22
    block                       aller à l'état 23
    blockbase                   aller à l'état 24
    name                        aller à l'état 25
    declarstat_list             aller à l'état 26
    decl_stat                   aller à l'état 27
    declaration                 aller à l'état 28
    declarationbase             aller à l'état 29
    decl_proc                   aller à l'état 30
    decl_func                   aller à l'état 31
    forward_func                aller à l'état 32
    compile_opt                 aller à l'état 33
    common_case                 aller à l'état 34
    expressionIncOuDec          aller à l'état 35
    statement                   aller à l'état 36
    statementbase               aller à l'état 37
    catchstatement              aller à l'état 38
    procedurecall               aller à l'état 39
    parenthese                  aller à l'état 40
    functioncall_ou_ref_matrix  aller à l'état 41
    ref_object                  aller à l'état 42
    ref_struct_list             aller à l'état 43
    ref_struct                  aller à l'état 44
    var_system                  aller à l'état 45
    casestatement               aller à l'état 46
    ifstatement                 aller à l'état 47
    whilestatement              aller à l'état 48
    repeatstatement             aller à l'état 49
    forstatement                aller à l'état 50
    assignment                  aller à l'état 51
    gestion_erreur              aller à l'état 52
    comment                     aller à l'état 53


état 1

  235 comment: ACOMMENT .

    $défaut  réduction par utilisation de la règle 235 (comment)


état 2

   14 name: IDENTIFIER .
  134 procedurecall: IDENTIFIER . ',' suite_call_list
  135              | IDENTIFIER .
  141 functioncall_ou_ref_matrix: IDENTIFIER . '(' suite_call_list ')'
  142                           | IDENTIFIER . '[' suite_call_list ']'
  143                           | IDENTIFIER . '(' ')'
  173 ref_struct: IDENTIFIER . '(' suite_call_list ')'
  174           | IDENTIFIER . '[' suite_call_list ']'
  175           | IDENTIFIER .
  232 gestion_erreur: IDENTIFIER . ':'

    '['  décalage et aller à l'état 54
    '('  décalage et aller à l'état 55
    ':'  décalage et aller à l'état 56
    ','  décalage et aller à l'état 57

    FLECHE      réduction par utilisation de la règle 14 (name)
    DIESE2EQ    réduction par utilisation de la règle 14 (name)
    DIESEEQ     réduction par utilisation de la règle 14 (name)
    TIMESEQ     réduction par utilisation de la règle 14 (name)
    PLUSEQ      réduction par utilisation de la règle 14 (name)
    MOINSEQ     réduction par utilisation de la règle 14 (name)
    SLASHEQ     réduction par utilisation de la règle 14 (name)
    MINEQ       réduction par utilisation de la règle 14 (name)
    MAXEQ       réduction par utilisation de la règle 14 (name)
    ANDEQ       réduction par utilisation de la règle 14 (name)
    EQEQ        réduction par utilisation de la règle 14 (name)
    GEEQ        réduction par utilisation de la règle 14 (name)
    GTEQ        réduction par utilisation de la règle 14 (name)
    LEEQ        réduction par utilisation de la règle 14 (name)
    LTEQ        réduction par utilisation de la règle 14 (name)
    MODEQ       réduction par utilisation de la règle 14 (name)
    NEEQ        réduction par utilisation de la règle 14 (name)
    OREQ        réduction par utilisation de la règle 14 (name)
    XOREQ       réduction par utilisation de la règle 14 (name)
    POWEREQ     réduction par utilisation de la règle 14 (name)
    PlusPlus    réduction par utilisation de la règle 14 (name)
    PlusPlus    [réduction par utilisation de la règle 135 (procedurecall)]
    MoinsMoins  réduction par utilisation de la règle 14 (name)
    MoinsMoins  [réduction par utilisation de la règle 135 (procedurecall)]
    '='         réduction par utilisation de la règle 14 (name)
    '['         [réduction par utilisation de la règle 135 (procedurecall)]
    '('         [réduction par utilisation de la règle 135 (procedurecall)]
    '.'         réduction par utilisation de la règle 175 (ref_struct)
    $défaut    réduction par utilisation de la règle 135 (procedurecall)


état 3

   13 blockbase: Begin . block End
  107 statementbase: Begin . statement_list_vide End

    ACOMMENT          décalage et aller à l'état 1
    IDENTIFIER        décalage et aller à l'état 2
    Begin             décalage et aller à l'état 58
    If                décalage et aller à l'état 4
    Case              décalage et aller à l'état 5
    Pro               décalage et aller à l'état 6
    While             décalage et aller à l'état 7
    Repeat            décalage et aller à l'état 8
    For               décalage et aller à l'état 9
    Function          décalage et aller à l'état 10
    Common            décalage et aller à l'état 11
    Return            décalage et aller à l'état 12
    Catch             décalage et aller à l'état 13
    Forward_function  décalage et aller à l'état 14
    COMPILE_OPT       décalage et aller à l'état 15
    PlusPlus          décalage et aller à l'état 16
    MoinsMoins        décalage et aller à l'état 17
    CR                décalage et aller à l'état 18
    '*'               décalage et aller à l'état 19
    '('               décalage et aller à l'état 20
    '!'               décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 55 (statement_list_vide)

    block                       aller à l'état 59
    blockbase                   aller à l'état 24
    name                        aller à l'état 25
    declarstat_list             aller à l'état 26
    decl_stat                   aller à l'état 27
    declaration                 aller à l'état 28
    declarationbase             aller à l'état 29
    decl_proc                   aller à l'état 30
    decl_func                   aller à l'état 31
    forward_func                aller à l'état 32
    compile_opt                 aller à l'état 33
    common_case                 aller à l'état 34
    statement_list_vide         aller à l'état 60
    statement_list              aller à l'état 61
    expressionIncOuDec          aller à l'état 35
    statement                   aller à l'état 62
    statementbase               aller à l'état 37
    catchstatement              aller à l'état 38
    procedurecall               aller à l'état 39
    parenthese                  aller à l'état 40
    functioncall_ou_ref_matrix  aller à l'état 41
    ref_object                  aller à l'état 42
    ref_struct_list             aller à l'état 43
    ref_struct                  aller à l'état 44
    var_system                  aller à l'état 45
    casestatement               aller à l'état 46
    ifstatement                 aller à l'état 47
    whilestatement              aller à l'état 48
    repeatstatement             aller à l'état 49
    forstatement                aller à l'état 50
    assignment                  aller à l'état 51
    gestion_erreur              aller à l'état 52
    comment                     aller à l'état 63


état 4

  198 ifstatement: If . expression_master Then statement_list_ctrl
  199            | If . expression_master Then statement_list_ctrl suite_if_else

    IDENTIFIER   décalage et aller à l'état 64
    INTEGER      décalage et aller à l'état 65
    REAL         décalage et aller à l'état 66
    DECIMAL      décalage et aller à l'état 67
    HEXADECIMAL  décalage et aller à l'état 68
    OCTAL        décalage et aller à l'état 69
    STRING       décalage et aller à l'état 70
    Not          décalage et aller à l'état 71
    TILDE        décalage et aller à l'état 72
    PlusPlus     décalage et aller à l'état 16
    MoinsMoins   décalage et aller à l'état 17
    '+'          décalage et aller à l'état 73
    '-'          décalage et aller à l'état 74
    '*'          décalage et aller à l'état 19
    '['          décalage et aller à l'état 75
    '('          décalage et aller à l'état 20
    '{'          décalage et aller à l'état 76
    '!'          décalage et aller à l'état 21

    name                        aller à l'état 77
    expression_master           aller à l'état 78
    expression                  aller à l'état 79
    expressionIncOuDec          aller à l'état 80
    integerAL                   aller à l'état 81
    denotation                  aller à l'état 82
    parenthese                  aller à l'état 83
    functioncall_ou_ref_matrix  aller à l'état 84
    structure                   aller à l'état 85
    ref_object                  aller à l'état 86
    ref_struct_list             aller à l'état 87
    ref_struct                  aller à l'état 44
    matrix                      aller à l'état 88
    var_system                  aller à l'état 89
    assignment                  aller à l'état 90


état 5

  185 casestatement: Case . expression_master Of case_suite ElseCase statement_list_case fin_case
  186              | Case . expression_master Of comment case_suite ElseCase statement_list_case fin_case
  187              | Case . expression_master Of case_suite fin_case
  188              | Case . expression_master Of comment case_suite fin_case

    IDENTIFIER   décalage et aller à l'état 64
    INTEGER      décalage et aller à l'état 65
    REAL         décalage et aller à l'état 66
    DECIMAL      décalage et aller à l'état 67
    HEXADECIMAL  décalage et aller à l'état 68
    OCTAL        décalage et aller à l'état 69
    STRING       décalage et aller à l'état 70
    Not          décalage et aller à l'état 71
    TILDE        décalage et aller à l'état 72
    PlusPlus     décalage et aller à l'état 16
    MoinsMoins   décalage et aller à l'état 17
    '+'          décalage et aller à l'état 73
    '-'          décalage et aller à l'état 74
    '*'          décalage et aller à l'état 19
    '['          décalage et aller à l'état 75
    '('          décalage et aller à l'état 20
    '{'          décalage et aller à l'état 76
    '!'          décalage et aller à l'état 21

    name                        aller à l'état 77
    expression_master           aller à l'état 91
    expression                  aller à l'état 79
    expressionIncOuDec          aller à l'état 80
    integerAL                   aller à l'état 81
    denotation                  aller à l'état 82
    parenthese                  aller à l'état 83
    functioncall_ou_ref_matrix  aller à l'état 84
    structure                   aller à l'état 85
    ref_object                  aller à l'état 86
    ref_struct_list             aller à l'état 87
    ref_struct                  aller à l'état 44
    matrix                      aller à l'état 88
    var_system                  aller à l'état 89
    assignment                  aller à l'état 90


état 6

   30 decl_proc: Pro . IDENTIFIER suite_param statement_list_vide End
   31          | Pro . IDENTIFIER statement_list_vide End
   32          | Pro . IDENTIFIER ':' ':' IDENTIFIER suite_param statement_list_vide End
   33          | Pro . IDENTIFIER ':' ':' IDENTIFIER statement_list_vide End

    IDENTIFIER  décalage et aller à l'état 92


état 7

  201 whilestatement: While . expression_master Do statement_list_ctrl

    IDENTIFIER   décalage et aller à l'état 64
    INTEGER      décalage et aller à l'état 65
    REAL         décalage et aller à l'état 66
    DECIMAL      décalage et aller à l'état 67
    HEXADECIMAL  décalage et aller à l'état 68
    OCTAL        décalage et aller à l'état 69
    STRING       décalage et aller à l'état 70
    Not          décalage et aller à l'état 71
    TILDE        décalage et aller à l'état 72
    PlusPlus     décalage et aller à l'état 16
    MoinsMoins   décalage et aller à l'état 17
    '+'          décalage et aller à l'état 73
    '-'          décalage et aller à l'état 74
    '*'          décalage et aller à l'état 19
    '['          décalage et aller à l'état 75
    '('          décalage et aller à l'état 20
    '{'          décalage et aller à l'état 76
    '!'          décalage et aller à l'état 21

    name                        aller à l'état 77
    expression_master           aller à l'état 93
    expression                  aller à l'état 79
    expressionIncOuDec          aller à l'état 80
    integerAL                   aller à l'état 81
    denotation                  aller à l'état 82
    parenthese                  aller à l'état 83
    functioncall_ou_ref_matrix  aller à l'état 84
    structure                   aller à l'état 85
    ref_object                  aller à l'état 86
    ref_struct_list             aller à l'état 87
    ref_struct                  aller à l'état 44
    matrix                      aller à l'état 88
    var_system                  aller à l'état 89
    assignment                  aller à l'état 90


état 8

  202 repeatstatement: Repeat . statement_list_vide Until expression_master
